# palette

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml  update-homebrew-tap.yml
src/: main.rs
src/config/: mod.rs
src/repo/: mod.rs
tests/: cli_tests.rs  integration_tests.rs
