[package]
name = "palette"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.44", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4.27"
env_logger = "0.11.8"
git2 = "0.20.2"
regex = "1.11.1"
colorize = "0.1.0"
